Refactor: Move fund components to Fund folder and refactor FundDetailsTable

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -62,7 +62,7 @@
   padding: 10px 20px;
   margin-left: 10px;
   border: none;
-  background-color: #007bff;
+  background-color: #9eaae0;
   color: white;
   border-radius: 5px;
   cursor: pointer;
