--- a/src/styles/FundDetailsTable.css
+++ b/src/styles/FundDetailsTable.css
@@ -1,8 +1,8 @@
 /* Main card container */
 .card-container-table {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 30px;
   justify-items: center;
   width: 100%;
   max-width: 1200px;
@@ -19,7 +19,7 @@
   transition: transform 0.2s, box-shadow 0.2s;
   width: 100%;
   max-width: 400px;
-  margin-bottom: 1px;
+  box-sizing: border-box;
 }
 
 .fund-card-table:hover {
