--- a/src/styles/FundTable.css
+++ b/src/styles/FundTable.css
@@ -57,4 +57,6 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    vertical-align: middle;
+    text-align: center;
 }
